<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">LIRC-Client</string>
    
    <!-- Main list activity -->
    <string name="add_activity">Add activity</string>
    <string name="manage_macros">Manage macros</string>
    <string name="query_remotes">Query devices from server</string>
    <string name="settings">Settings</string>
    <string name="connect_error">Cannot connect to server!\n\nPlease check your connection settings and try again.</string>
    <string name="query_complete">Query complete!</string>
    
    <string-array name="navigation_targets">
        <item>Activities</item>
        <item>Devices</item>
    </string-array>
    
    <string name="menu_activity_rename">Rename activity</string>
    <string name="menu_activity_delete">Delete activity</string>
    <string name="menu_device_delete">Delete device</string>
    <string name="menu_device_simulate">Use SIMULATE</string>
    
    <!-- Info texts -->
    <string name="info_add_activity">No activity has been added yet. Please use the menu to add a new activity.</string>
    <string name="info_select_activity">Please choose an activity from the list</string>
    <string name="info_add_devices">Please configure an LIRC server in the settings and use the menu to query all devices.</string>
    <string name="info_select_device">Please choose a device from the list</string>
    <string name="info_wlan_required">WLAN must be active in order to send commands</string>
    <string name="info_activity_started">Activity has been started!</string>
    <string name="info_activity_switched">Activity has been switched!</string>
    <string name="info_activity_stopped">Activity has been stopped!</string>
    <string name="info_page_added">New page added</string>
    <string name="info_last_page_deleted">Last page deleted</string>
	<string name="info_use_tiles">Press a tile to set a command</string>
    <string name="info_consider_editmode">Consider enabling Edit mode via the menu</string>
    <string name="info_cannot_rotate">Cannot move this button because the device is currently rotated</string>
    <string name="info_add_macro">No macro has been added yet. Please use the menu to add a new macro.</string>
    <string name="info_select_macro">Please choose a macro from the list</string>
    <string name="info_no_macros">No macros have been defined yet. In the Activity list, use the menu to define your own macros.</string>
    <string name="info_add_command">Use the menu to add commands to your macro</string>
    
    <!-- Control fragment -->
	<string name="error_no_cmd">Error: Command is no longer available</string>
	<string name="error_no_code">Error: Code not found, please query your devices again</string>
	<string name="menu_set_command">Set command</string>
	<string name="menu_set_macro">Set macro</string>
	<string name="menu_delete_button">Delete button</string>
	<string name="menu_delete_command">Delete command</string>
	<string name="menu_set_icon">Set icon</string>
	<string name="menu_delete_icon">Delete icon</string>
	<string name="menu_set_title">Set title</string>
	<string name="menu_edit_mode">Edit mode</string>
	<string name="menu_add_page">Add page</string>
	<string name="menu_delete_last_page">Delete last page</string>
	<string name="menu_init_commands">Manage start commands</string>
	<string name="menu_stop_commands">Manage stop commands</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="help">Help</string>
	
	<!-- Macro activity -->
	<string name="menu_add_macro">Add new macro</string>
	<string name="menu_rename_macro">Rename macro</string>
	<string name="menu_delete_macro">Delete macro</string>
	
	<!-- Command picker dialog -->
	<string name="dialog_cmd_title">Choose command</string>
	
	<!-- Macro picker dialog -->
	<string name="dialog_macro_title">Choose macro</string>
	
	<!-- Icon picker dialog -->
	<string name="dialog_icon_title">Choose icon</string>
	<string name="dialog_icon_message">Please choose an icon:</string>
	
	<!-- Text picker dialog -->
	<string name="dialog_caption_title">Choose caption</string>
	<string name="dialog_caption_message">Please enter a caption for the selected button:</string>
	
	<string name="dialog_activity_add_message">Please choose a name for the new activity:</string>
	<string name="dialog_activity_rename_message">Please choose a name for the selected activity:</string>
	<string name="dialog_device_rename_message">Please choose a name for the selected device:</string>
	<string name="dialog_macro_add_message">Please choose a name for the new macro:</string>
	<string name="dialog_macro_rename_message">Please choose a name for the selected macro:</string>
		
	<!-- Command manager dialog -->
	<string name="commands_empty">No commands available</string>
	<string name="add_command">Add command</string>
	
	<!-- Fix issues dialog -->
	<string name="dialog_fix_issues_title">Solve issues</string>
	<string name="dialog_fix_issues_message">If a problem has occurred, you can resend commands by tapping an item in the list below:</string>
	
	<!-- Progress dialog while connecting -->
	<string name="dialog_connect_title">Connecting&#8230;</string>
	<string name="dialog_connect_message">Connecting to the LIRC server&#8230;</string>
	
	<!-- Progress dialog for activity start/stop -->
	<string name="dialog_activity_start_title">Starting activity</string>
	<string name="dialog_activity_switch_title">Switching activity</string>
	<string name="dialog_activity_stop_title">Stopping activity</string>
	<string name="dialog_activity_start_msg">Please wait while the activity is being started&#8230;</string>
	<string name="dialog_activity_switch_msg">Please wait while the activity is being switched&#8230;</string>
	<string name="dialog_activity_stop_msg">Please wait while the activity is being stopped&#8230;</string>
		
	<!-- Settings -->
	<string name="settings_connection">Connection settings</string>
    <string name="settings_ip_port">IP address and port</string>
    <string name="settings_ip_port_summary">IP address of the LIRC server (IP:Port)</string>
    <string name="settings_ip_port_dialog_title">Set LIRC server</string>
    <string name="settings_wifi_device">Use WLAN to connect</string>
    <string name="settings_wifi_device_summary">Check this if WLAN should be used to connect your LIRC server</string>
    <string name="settings_grid">Grid size</string>
    <string name="settings_rows">Rows</string>
    <string name="settings_cols">Columns</string>
    <string name="settings_rows_dialog_title">Set rows</string>
    <string name="settings_cols_dialog_title">Set columns</string>
    <string name="settings_rows_summary">Number of rows in the control grid</string>
    <string name="settings_cols_summary">Number of columns in the control grid</string>
    <string name="devices">Devices</string>
    <string name="setting_device_simulate_delay_title">SIMULATE delay</string>
    <string name="setting_device_simulate_delay_summary">Delay between each sent command when the SIMULATE option is used and a button is long-pressed (in ms)</string>
    <string name="activities">Activities</string>
    <string name="settings_activity_autoswitch_title">Switch activities automatically</string>
    <string name="settings_activity_autoswitch_summary">Stop current activitiy before another activity is started</string>
    <string name="settings_activity_delay_title">Start/Stop delay</string>
    <string name="settings_activity_delay_summary">Delay between each command when an activity is started or stopped (in ms)</string>
    <string name="settings_activity_macro_delay_title">Macro delay</string>
    <string name="settings_activity_macro_delay_summary">Delay between each command when a macro is sent (in ms)</string>
    <string name="settings_rotation">Rotation</string>
    <string name="settings_rotation_behavior">Rotation behavior</string>
    <string name="settings_rotation_behavior_summary">Allows you to lock the screen orientation</string>
    <string-array name="rotation_entries">
        <item>Automatic (Default)</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="settings_about">About</string>
    <string name="settings_licenses_title">Open source licenses</string>
    <string name="settings_licenses_summary">License details for open source software</string>
    
    <!-- DO NOT TOUCH -->
    <string-array name="rotation_values">
        <item>AUTO</item>
        <item>PORTRAIT</item>
        <item>LANDSCAPE</item>
    </string-array>
</resources>